kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdm-platform
  labels:
    app.kubernetes.io/name: mdm-platform
    app.kubernetes.io/component: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mdm-platform
      app.kubernetes.io/component: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mdm-platform
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: replace-from-configmap
      containers:
        - name: mdm-platform
          image: mdm-platform
          imagePullPolicy: IfNotPresent
          command:
            - /mdm-platform/scripts/runner.sh
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 24
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
