kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdm-platform
  labels:
    app.kubernetes.io/name: mdm-platform
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mdm-platform
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8009
      targetPort: http
      protocol: TCP
